[gd_scene load_steps=5 format=2]

[ext_resource path="res://src/Scenes/SubOptions/Playlists/CustomPlaylist-s/Description.gd" type="Script" id=1]
[ext_resource path="res://src/Assets/Icons/White/General/add_1_72px.png" type="Texture" id=2]
[ext_resource path="res://src/Themes/Buttons/ClearButtons.tres" type="Theme" id=3]

[sub_resource type="Animation" id=1]
resource_name = "Expand"
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("ScrollContainer:rect_min_size:y")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 150.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ScrollContainer:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.05 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ScrollContainer/Description:modulate:a")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.05, 0.25 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 1.0 ]
}

[node name="Description" type="VBoxContainer"]
margin_right = 89.0
margin_bottom = 42.0
script = ExtResource( 1 )

[node name="HSeparator" type="HSeparator" parent="."]
margin_right = 89.0
margin_bottom = 8.0

[node name="Expand" type="Button" parent="."]
margin_top = 16.0
margin_right = 89.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 24 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
theme = ExtResource( 3 )
text = "Description"
icon = ExtResource( 2 )
flat = true
expand_icon = true

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
margin_top = 32.0
margin_right = 767.0
margin_bottom = 39.5

[node name="Description" type="TextEdit" parent="ScrollContainer"]
margin_right = 767.0
margin_bottom = 7.5
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="DescriptionAnimations" type="AnimationPlayer" parent="."]
anims/Expand = SubResource( 1 )

[node name="Bottomempty" type="Control" parent="."]
margin_top = 48.0
margin_right = 89.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 10 )

[connection signal="pressed" from="Expand" to="." method="_on_Expand_pressed"]
[connection signal="text_changed" from="ScrollContainer/Description" to="." method="save_description"]
